# poke-sizes

./: .gitignore  Cargo.toml  Rocket.toml  reports.json  shell.nix
.github/workflows/: systemd-restart.yml
src/: images.rs  main.rs  size.rs
static/css/: compare.css
static/js/: compare.js
templates/: compare.html.hbs  index.html.hbs
